# ai-meeting-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile.diarize  MEMORY.md  PRD.md  README.md  TODO.md
.cargo/: config.toml
.claude/: settings.json
.github/scripts/: diarize-run.sh
.github/workflows/: ci.yml  diarize-docker.yml  docker-build.yml  mcp-cli-artifacts.yml  release.yml
.opencode/: ACTIVE.md  NOTES.md  TODO.md
.opencode/plans/: file-upload-ingest.md  phase-2.md  phase-diarize-crate.md  phase-import-system.md  phase-speaker-diarization.md.deferred  phase-summary-configurable.md  week2-metadata-resolution.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: config.rs  export.rs  import.rs  interactive.rs  list.rs  mod.rs  server.rs  show.rs  summarize.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/migrations/: 20260720000000_initial.sql  20260720040000_transcript_versioning.sql  20260720050000_add_summary_format.sql  20260721000000_add_refined_text.sql  20260721010000_segment_refined_text.sql  20260721020000_summary_meetingnotes_template.sql  20260722000000_voice_bank.sql  20260723000000_orchestrator_runs.sql  20260723120000_meeting_chat.sql
crates/core/src/: audio.rs  config.rs  config_validation.rs  db.rs  diarize.rs  fs.rs  import.rs  jobs.rs  lib.rs  metadata.rs  models.rs  runners.rs  storage.rs  summary.rs  summary_job.rs  transcription.rs
crates/core/src/bots/: client.rs  config.rs  mod.rs
crates/core/src/diarize/: audio.rs  embed.rs  error.rs  merge.rs  mod.rs  models.rs  models_download.rs
crates/core/src/orchestrator/: config.rs  mod.rs  models.rs  service.rs  vexa.rs
crates/core/src/voiceprint/: mod.rs
crates/core/tests/: audio_test.rs  gemma4_integration_test.rs  whisper_integration_test.rs
crates/core/tests/fixtures/vexa/: meeting_ended.json
crates/diarize/: Cargo.toml
crates/diarize-service/: Cargo.toml
crates/diarize-service/src/: main.rs
crates/diarize/examples/: diarize_file.rs
crates/diarize/src/: audio.rs  config.rs  error.rs  lib.rs  merge.rs  models.rs  validate.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  path_resolve.rs  schemas.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  bot_handlers.rs  config_handlers.rs  error.rs  handlers.rs  import_handlers.rs  lib.rs  logging.rs  main.rs  openapi.rs  orchestrator_handlers.rs  person_handlers.rs  state.rs  summary_handlers.rs  types.rs  validation.rs
crates/server/tests/: auth_scope_tests.rs  config_api_tests.rs  metadata_api_tests.rs
deploy/: .env.example  Dockerfile.diarize  Dockerfile.mcp  Dockerfile.server  README.md  docker-build.sh  docker-compose.bots.yml  docker-compose.yml
docs/: API.md
docs/postman/: ai-meeting-agent.postman_collection.json  openapi.yaml
services/meeting-bot/: .env.example  Dockerfile  README.md  entrypoint.sh  package.json  tsconfig.json
services/meeting-bot/src/: browser.ts  config.ts  index.ts  logger.ts  runner.ts  types.ts
services/meeting-bot/src/capture/: media-recorder.ts  recorder.ts  teams-chat.ts
services/meeting-bot/src/db/: client.ts
services/meeting-bot/src/handoff/: import.ts
tests/output/: summary.json  transcript.json
