[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/cli",
    "crates/mcp",
    "crates/diarize-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BMW ECE NTUST"]
license = "MIT"
repository = "https://github.com/bmw-ece-ntust/ai-meeting-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Web framework (server only)
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tower = { version = "0.5", features = ["util"] }

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }

# Temp files
tempfile = "3"

# Stream utilities
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# MCP
rmcp = { version = "2.2", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (cli only)
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"
comfy-table = "7"

# Config
dotenv = "0.15"

# FFmpeg wrapper
ffmpeg-sidecar = "2.5"

[profile.release]
# Link-time optimization: "thin" balances compile time with optimization
lto = "thin"
# Single codegen unit for maximum optimization (slower compile, smaller/faster binary)
codegen-units = 1
# Strip debug symbols from release builds
strip = "symbols"
# Abort on panic instead of unwinding (smaller binary)
panic = "abort"
