[package]
name = "meeting-agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
ffmpeg-sidecar = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }

# Speaker diarization (in-process, speakrs) - optional
symphonia = { version = "0.5", features = ["mp3", "wav"], optional = true }

# Metadata parsing
regex = "1"

# OpenAPI (optional, enabled by server)
utoipa = { version = "4", optional = true, features = ["chrono", "uuid"] }

# Platform-specific speakrs configurations
[target.'cfg(target_os = "macos")'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "openblas-static", "coreml"] }

[target.'cfg(target_os = "linux")'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "openblas-static", "cuda", "migraphx"] }

[target.'cfg(not(any(target_os = "macos", target_os = "linux")))'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false }

# Metadata parsing
regex = "1"

# OpenAPI (optional, enabled by server)
utoipa = { version = "4", optional = true, features = ["chrono", "uuid"] }

[features]
openapi = ["utoipa"]
diarization = ["speakrs", "symphonia"]

[dev-dependencies]
wiremock = "0.6"
env_logger = { workspace = true }
