[package]
name = "meeting-agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
ffmpeg-sidecar = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }

# Speaker diarization (in-process, speakrs) - optional
symphonia = { version = "0.5", features = ["mp3", "wav"], optional = true }
# Used instead of speakrs from_pretrained so HF_HOME is honored and CUDA file set is complete
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq", "native-tls"] }

# Metadata parsing
regex = "1"

# Database - SQLite with sqlx
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# OpenAPI (optional, enabled by server)
utoipa = { version = "4", optional = true, features = ["chrono", "uuid"] }

# Platform-specific speakrs configurations
# Use openblas-system for all platforms (most compatible across architectures)
[target.'cfg(target_os = "macos")'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "coreml", "openblas-system"] }

[target.'cfg(target_os = "linux")'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "cuda", "migraphx", "openblas-system"] }

[target.'cfg(target_os = "windows")'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "openblas-system"] }

[target.'cfg(not(any(target_os = "macos", target_os = "linux", target_os = "windows")))'.dependencies]
speakrs = { version = "0.5", optional = true, default-features = false, features = ["online", "openblas-system"] }

[features]
openapi = ["utoipa"]
diarization = ["speakrs", "symphonia", "hf-hub"]

[dev-dependencies]
wiremock = "0.6"
env_logger = { workspace = true }
