[package]
name = "meeting-agent-diarize-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "timeout"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core functionality - reuse existing diarization code
meeting-agent-core = { path = "../core", features = ["diarization"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
thiserror = "1"

[features]
default = ["cuda"]
cuda = []
