[package]
name = "meeting-agent-diarize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sherpa-onnx = { workspace = true }
symphonia = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }

[[bin]]
name = "diarize-server"
path = "src/bin/diarize-server.rs"

[[example]]
name = "diarize_file"
path = "examples/diarize_file.rs"
