[package]
name = "meeting-agent-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "meeting_agent_mcp"
path = "src/lib.rs"

[[bin]]
name = "meeting-agent-mcp"
path = "src/bin/cli.rs"

[[bin]]
name = "meeting-agent-mcp-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

# native-tls uses OpenSSL only on Linux; macOS=Security.framework, Windows=SChannel.
# Vendored so aarch64-linux cross-build needs no target libssl.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
