[package]
name = "meeting-agent-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "meeting_agent_server"
path = "src/lib.rs"

[[bin]]
name = "meeting-agent-server"
path = "src/main.rs"

[dependencies]
# Local dependencies
meeting-agent-core = { path = "../core", features = ["openapi", "diarization"] }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
